# opencv-cpp

lab1/: CMakeLists.txt  main.cpp
lab10/zad1/: CMakeLists.txt  main.cpp
lab11/: CMakeLists.txt  main.cpp
lab2/zad1/: CMakeLists.txt  main.cpp
lab2/zad2a/: CMakeLists.txt  main.cpp
lab2/zad2b/: CMakeLists.txt  main.cpp
lab2/zad2c/: CMakeLists.txt  main.cpp
lab2/zad2d/: CMakeLists.txt  main.cpp
lab3/zad1/: main.cpp
lab3/zad1a/: CMakeLists.txt
lab3/zad2/: CMakeLists.txt
lab3/zad2a/: CMakeLists.txt  main.cpp
lab4/zad1/: CMakeLists.txt  main.cpp
lab4/zad2/: main.cpp
lab5/zad1/: CMakeLists.txt  main.cpp
lab6/zad1/: main.cpp  values.txt
lab6/zad2/: CMakeLists.txt  main.cpp
lab7/zad1/: CMakeLists.txt  FollowedObiect.cpp  FollowedObiect.h  main.cpp
lab8/zad1/: main.cpp
lab8/zad2/: CMakeLists.txt  main.cpp
lab9/temp/: CMakeLists.txt  Params.h  Tracking.cpp  Tracking.h  main.cpp
lab9/zad1/: main.cpp
